--- a/easy_learning_app/android/app/src/main/res/values/strings.xml
+++ b/easy_learning_app/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">Easy Learning App</string>
+  <string name="app_name">easy_learning_app</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
 </resources>
